Fix buttons' text vertical alignment

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,7 +24,7 @@ input {
     display: block;
     font-family: Roboto, sans-serif;
     height: 32px;
-    line-height: 32px;
+    line-height: 30px;
     margin-top: 4px;
     padding: 0 8px;
     width: 150px;
